Fix background and texts align

--- a/blog-front/src/App.css
+++ b/blog-front/src/App.css
@@ -1,8 +1,3 @@
-.App {
-  text-align: center;
-  background-color: #2c2f33;
-}
-
 .App-header {
   display: flex;
   flex-direction: column;
